--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Video youtube pour la page accueil: https://youtu.be/-u3vE84Wo_U?si=Xb3oAs-ysXqo82Ml -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,7 +18,6 @@
     </div>
     <header>
 
-    <a href="#" class="logo">Khennous Moad</a>
 
     <nav>
         <a href="#" class="active">Accueil</a>
