--- a/projets/index.html
+++ b/projets/index.html
@@ -54,6 +54,13 @@
         <li class="card"><a class="card-link" href="Mission4/Mission 4 _Khennous_Moad_Les environnements d’exploitation.pdf"><span class="card-title">Mission 4</span></a></li>
       </ul>
     </section>
+
+    <section class="section">
+      <h2>Projets Personels 🧑🏻‍💼💡 </h2>
+      <ul class="card-list">
+        <li class="card"><a class="card-link" href="Cartes_Naruto/index.html"><span class="card-title">Carte Naruto 🍥</span></a></li>
+      </ul>
+    </section>
   </main>
 
   <footer class="footer">
