--- a/projets/index.html
+++ b/projets/index.html
@@ -59,6 +59,7 @@
       <h2>Projets Personels 🧑🏻‍💼💡 </h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="Cartes_Naruto/index.html"><span class="card-title">Carte Naruto 🍥</span></a></li>
+        <li class="card"><a class="card-link" href="Restaurant_japonais/index.html"><span class="card-title">Sakura Sushi 🍣</span></a></li>
       </ul>
     </section>
   </main>
