--- a/projets/Restaurant_japonais/carte.html
+++ b/projets/Restaurant_japonais/carte.html
@@ -24,13 +24,13 @@
         </nav>
     </header>
 
-    <h1 class="titre-equipe">🍣 Nos Menus Japonais</h1>
+    <h1 class="titre-carte">🍣 Nos Menus Japonais</h1>
 
 <section class="menus">
   <!-- Menu Sushi -->
   <div class="carte menu-sushi">
     <div class="perso">
-      <img src="img/menus/sushi-menu.jpg" alt="Menu Sushi">
+      <img src="img/sushi.jpeg" alt="Menu Sushi">
     </div>
 
     <div class="infos">
@@ -43,7 +43,7 @@
   <!-- Menu Ramen -->
   <div class="carte menu-ramen">
     <div class="perso">
-      <img src="img/menus/ramen-menu.jpg" alt="Menu Ramen">
+      <img src="img/ramen.jpeg" alt="Menu Ramen">
     </div>
 
     <div class="infos">
@@ -56,7 +56,7 @@
   <!-- Menu Bento -->
   <div class="carte menu-bento">
     <div class="perso">
-      <img src="img/menus/bento-menu.jpg" alt="Menu Bento">
+      <img src="img/bento.jpeg" alt="Menu Bento">
     </div>
 
     <div class="infos">
