--- a/projets/Restaurant_japonais/index.html
+++ b/projets/Restaurant_japonais/index.html
@@ -35,7 +35,7 @@
             Chaque plat est une invitation au voyage, préparé avec passion et respect du savoir-faire ancestral.</p>
         </div>
         <div>
-            <a href="menu.html" class="btn-menu">Voir notre magnifique carte</a>
+            <a href="carte.html" class="btn-menu">Voir notre magnifique carte</a>
         </div>
     </section>
     
