--- a/projets/index.html
+++ b/projets/index.html
@@ -32,7 +32,6 @@
         <li class="card"><a class="card-link" href="TP7.1/index.html"><span class="card-title">TP7.1</span></a></li>
         <li class="card"><a class="card-link" href="TP7.2/index.html"><span class="card-title">TP7.2</span></a></li>
          <li class="card"><a class="card-link" href="TP11/index.html"><span class="card-title">TP11</span></a></li>
-        <li class="card"><a class="card-link" href="TP12/index.html"><span class="card-title">TP12)</span></a></li>
       </ul>
     </section>
 
@@ -45,6 +44,7 @@
         <li class="card"><a class="card-link" href="TP8/index.html"><span class="card-title">TP8</span></a></li>
         <li class="card"><a class="card-link" href="TP10/index.html"><span class="card-title">TP10</span></a></li>
         <li class="card"><a class="card-link" href="TP10_ameliorer/index.html"><span class="card-title">TP10 - Amélioré (Bonus)</span></a></li>
+        <li class="card"><a class="card-link" href="TP12/index.html"><span class="card-title">TP12</span></a></li>
       </ul>
     </section>
 
