--- a/projets/Restaurant_japonais/contact.html
+++ b/projets/Restaurant_japonais/contact.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="contact.css" type="text/css">
     
     <!-- Lien vers Font Awesome -->
@@ -65,3 +65,4 @@
     
 </body>
 </html>
+
