--- a/projets/index.html
+++ b/projets/index.html
@@ -55,6 +55,7 @@
         <li class="card"><a class="card-link" href="Mission3/mission3.html"><span class="card-title">Mission 3</span></a></li>
         <li class="card"><a class="card-link" href="Mission4/Mission 4 _Khennous_Moad_Les environnements d’exploitation.pdf"><span class="card-title">Mission 4</span></a></li>
          <li class="card"><a class="card-link" href="Mission5/index.html"><span class="card-title">Mission 5</span></a></li>
+        <li class="card"><a class="card-link" href="Mission6/index.html"><span class="card-title">Mission 6</span></a></li>
       </ul>
     </section>
 
