--- a/projets/index.html
+++ b/projets/index.html
@@ -32,6 +32,7 @@
         <li class="card"><a class="card-link" href="TP7.1/index.html"><span class="card-title">TP7.1</span></a></li>
         <li class="card"><a class="card-link" href="TP7.2/index.html"><span class="card-title">TP7.2</span></a></li>
          <li class="card"><a class="card-link" href="TP11/index.html"><span class="card-title">TP11</span></a></li>
+        <li class="card"><a class="card-link" href="TP11/index.html"><span class="card-title">TP13</span></a></li>
       </ul>
     </section>
 
