Fix HTML structure and formatting in index.html

--- a/projets/TP13/index.html
+++ b/projets/TP13/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Bienvenue dans le TP13</h1>
-    <button onclick="affetab()">Afficher Tableau</button>
+    <button onclick="afftab()">Afficher Tableau</button>
     <button onclick="afftab2()">Afficher Tableau 2</button>
     <button onclick="cnt()">Connecter </button>
     <button onclick="cnt2()">Connecter 2</button>
@@ -18,5 +18,6 @@
     
 </body>
 <script src="app.js"></script>
+
 
 </html>
