--- a/projets/index.html
+++ b/projets/index.html
@@ -47,6 +47,7 @@
         <li class="card"><a class="card-link" href="TP10/index.html"><span class="card-title">TP10</span></a></li>
         <li class="card"><a class="card-link" href="TP10_ameliorer/index.html"><span class="card-title">TP10 - Amélioré (Bonus)</span></a></li>
         <li class="card"><a class="card-link" href="TP12/index.html"><span class="card-title">TP12</span></a></li>
+        <li class="card"><a class="card-link" href="TP14/index.html"><span class="card-title">TP14</span></a></li>
       </ul>
     </section>
 
