--- a/projets/TP14/index.html
+++ b/projets/TP14/index.html
@@ -130,9 +130,11 @@
                 </tr>
             </table>
         </div>
+           <a href="../">Retour à la page d'acceuil</a>
 
     </div>
     
     <script src="app.js"></script>
 </body>
+
 </html>
