--- a/projets/TP14/index.html
+++ b/projets/TP14/index.html
@@ -131,6 +131,7 @@
             </table>
         </div>
            <a href="../">Retour à la page d'acceuil</a>
+        <button onclick="impression()">Imprimer</button>
 
     </div>
     
@@ -138,3 +139,4 @@
 </body>
 
 </html>
+
