--- a/projets/index.html
+++ b/projets/index.html
@@ -31,7 +31,7 @@
         <li class="card"><a class="card-link" href="TP5/index.html"><span class="card-title">TP5</span></a></li>
         <li class="card"><a class="card-link" href="TP7.1/index.html"><span class="card-title">TP7.1</span></a></li>
         <li class="card"><a class="card-link" href="TP7.2/index.html"><span class="card-title">TP7.2</span></a></li>
-        <li class="card"><a class="card-link" href="TP9/index.html"><span class="card-title">TP9</span></a></li>
+        <li class="card"><a class="card-link" href="TP9/calculatrice.html"><span class="card-title">TP9</span></a></li>
          <li class="card"><a class="card-link" href="TP11/index.html"><span class="card-title">TP11</span></a></li>
         <li class="card"><a class="card-link" href="TP13/index.html"><span class="card-title">TP13</span></a></li>
       </ul>
