--- a/projets/index.html
+++ b/projets/index.html
@@ -24,32 +24,46 @@
 
   <main class="container">
     <section class="section">
-      <h2>TP non notés 🧪</h2>
+      <h2>TP non notés HTML/CSS 🧪</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="TP1/index.html"><span class="card-title">TP1</span></a></li>
         <li class="card"><a class="card-link" href="TP3/index.html"><span class="card-title">TP3</span></a></li>
         <li class="card"><a class="card-link" href="TP5/index.html"><span class="card-title">TP5</span></a></li>
         <li class="card"><a class="card-link" href="TP7.1/index.html"><span class="card-title">TP7.1</span></a></li>
         <li class="card"><a class="card-link" href="TP7.2/index.html"><span class="card-title">TP7.2</span></a></li>
-        <li class="card"><a class="card-link" href="TP9/calculatrice.html"><span class="card-title">TP9</span></a></li>
-         <li class="card"><a class="card-link" href="TP11/index.html"><span class="card-title">TP11</span></a></li>
-        <li class="card"><a class="card-link" href="TP13/index.html"><span class="card-title">TP13</span></a></li>
       </ul>
     </section>
 
     <section class="section">
-      <h2>TP notés 📝</h2>
+      <h2>TP notés HTML/CSS 📝</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="TP2/index.html"><span class="card-title">TP2</span></a></li>
         <li class="card"><a class="card-link" href="TP4/index.html"><span class="card-title">TP4</span></a></li>
         <li class="card"><a class="card-link" href="TP6/index.html"><span class="card-title">TP6</span></a></li>
         <li class="card"><a class="card-link" href="TP8/index.html"><span class="card-title">TP8</span></a></li>
+      </ul>
+    </section>
+
+      <section class="section">
+      <h2>TP non notés JAVASCRIPT 🧪</h2>
+      <ul class="card-list">
+        <li class="card"><a class="card-link" href="TP9/calculatrice.html"><span class="card-title">TP9</span></a></li>
+        <li class="card"><a class="card-link" href="TP11/index.html"><span class="card-title">TP11</span></a></li>
+        <li class="card"><a class="card-link" href="TP13/index.html"><span class="card-title">TP13</span></a></li>
+      </ul>
+    </section>
+            
+
+    <section class="section">
+      <h2>TP notés JAVASCRIPT 📝</h2>
+      <ul class="card-list">
         <li class="card"><a class="card-link" href="TP10/index.html"><span class="card-title">TP10</span></a></li>
         <li class="card"><a class="card-link" href="TP10_ameliorer/index.html"><span class="card-title">TP10 - Amélioré (Bonus)</span></a></li>
         <li class="card"><a class="card-link" href="TP12/index.html"><span class="card-title">TP12</span></a></li>
         <li class="card"><a class="card-link" href="TP14/index.html"><span class="card-title">TP14</span></a></li>
       </ul>
     </section>
+
 
     <section class="section">
       <h2>Missions 🚀</h2>
@@ -59,6 +73,14 @@
         <li class="card"><a class="card-link" href="Mission4/Mission 4 _Khennous_Moad_Les environnements d’exploitation.pdf"><span class="card-title">Mission 4</span></a></li>
          <li class="card"><a class="card-link" href="Mission5/index.html"><span class="card-title">Mission 5</span></a></li>
         <li class="card"><a class="card-link" href="Mission6/index.html"><span class="card-title">Mission 6</span></a></li>
+      </ul>
+    </section>
+    
+    <section class="section">
+      <h2>Base de données (SQL) 💡</h2>
+      <ul class="card-list">
+        <li class="card"><a class="card-link" href=#><span class="card-title">TP1</span></a></li>
+        <li class="card"><a class="card-link" href=#><span class="card-title">TP2</span></a></li>
       </ul>
     </section>
 
