--- a/projets/index.html
+++ b/projets/index.html
@@ -45,7 +45,7 @@
     </section>
 
       <section class="section">
-      <h2>TP non notés JavaScript 🧪</h2>
+      <h2>TP non notés JavaScript 👨🏽‍💻</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="TP9/calculatrice.html"><span class="card-title">TP9</span></a></li>
         <li class="card"><a class="card-link" href="TP11/index.html"><span class="card-title">TP11</span></a></li>
@@ -55,7 +55,7 @@
             
 
     <section class="section">
-      <h2>TP notés JavaScript 📝</h2>
+      <h2>TP notés JavaScript ​📋​</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="TP10/index.html"><span class="card-title">TP10</span></a></li>
         <li class="card"><a class="card-link" href="TP10_ameliorer/index.html"><span class="card-title">TP10 - Amélioré (Bonus)</span></a></li>
