--- a/projets/TP15/tab.html
+++ b/projets/TP15/tab.html
@@ -11,22 +11,28 @@
     Nom: <br>
     <input type="text" id="nom" placeholder="Entrez un nom" name="nom"><br>
     Age: <br>
-    <input type="text" id="age" placeholder="Entrez un âge" name="age">
+    <input type="text" id="age" placeholder="Entrez un âge" name="age"><br>
+    Prenom: <br>
+    <input type="text" id="prenom" placeholder="Entrez un prenom" name="prenom">
     <br>
     <br>
+    
 
     <table border="2" id="tableau">
         <tr>
             <th>Nom</th>
             <th>Âge</th>
+             <th>Prenom</th>
         </tr>
         <tr>
-            <td>Moad</td>
+            <td>Khennous</td>
             <td>19</td>
+            <td>Moad</td>
         </tr>
          <tr>
-            <td>John</td>
-            <td>30</td>
+            <td>Dupond</td>
+            <td>18</td>
+            <td>Jean</td>
         </tr>
     </table>
 
