--- a/projets/BD_TP1/index.html
+++ b/projets/BD_TP1/index.html
@@ -19,7 +19,7 @@
       <h3>📂 Fichiers du TP</h3>
       <ul>
         <li>
-          <a href="agence_location_db.zip" download>📥 Télécharger le script SQL (agence_location_db.sql)</a>
+          <a href="agence_location_db.sql" download>📥 Télécharger le script SQL (agence_location_db.sql)</a>
         </li>
         <li>
           <a href="tp_1_BD.pdf" target="_blank">📄 Voir le sujet du TP (PDF)</a>
@@ -38,4 +38,5 @@
     </section>
 
 </body>
+
 </html>
