--- a/projets/index.html
+++ b/projets/index.html
@@ -82,7 +82,7 @@
       <h2>Base de données (SQL) 📈​</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="BD_TP1/index.html"><span class="card-title">TP1</span></a></li>
-        <li class="card"><a class="card-link" href=#><span class="card-title">TP2</span></a></li>
+        <li class="card"><a class="card-link" href="BD_TP2/index.html"><span class="card-title">TP2</span></a></li>
       </ul>
     </section>
 
