--- a/projets/index.html
+++ b/projets/index.html
@@ -83,6 +83,7 @@
       <ul class="card-list">
         <li class="card"><a class="card-link" href="BD_TP1/index.html"><span class="card-title">TP1</span></a></li>
         <li class="card"><a class="card-link" href="BD_TP2/index.html"><span class="card-title">TP2</span></a></li>
+        <li class="card"><a class="card-link" href="BD_TP3_noté/index.html"><span class="card-title">TP3 - Noté</span></a></li>
       </ul>
     </section>
 
