--- a/projets/BD_TP3_noté/index.html
+++ b/projets/BD_TP3_noté/index.html
@@ -19,7 +19,7 @@
       <h3>📂 Fichiers du TP</h3>
       <ul>
         <li>
-          <a href="centre_de_formation.sql" download>📥 Télécharger le script SQL (agence_location_db.sql)</a>
+          <a href="centre_de_formation.sql" download>📥 Télécharger le script SQL (centre_de_formation.sql)</a>
         </li>
         <li>
           <a href="sujet_tp3_bd.pdf" target="_blank">📄 Voir le sujet du TP (PDF)</a>
@@ -32,5 +32,6 @@
     </section>
 
 </body>
+
 
 </html>
