--- a/projets/BD_TP3_noté/index.html
+++ b/projets/BD_TP3_noté/index.html
@@ -29,12 +29,13 @@
         </li>
       </ul>
 
-      <h3>📂 Capture du concepteur</h3>
+      <h3>Capture du concepteur</h3>
         <img src="concepteur.png">
 
 
     </section>
 
 </body>
+
 
 </html>
