--- a/projets/index.html
+++ b/projets/index.html
@@ -89,6 +89,13 @@
     </section>
 
     <section class="section">
+      <h2>Certifications</h2>
+      <ul class="card-list">
+        <li class="card"><a class="card-link" href="Certif_Mooc_ANSSI/index.html"><span class="card-title">Certif. MOOC De L'ANSSI</span></a></li>
+      </ul>
+    </section>
+
+    <section class="section">
       <h2>Projets Personels 🧑🏻‍💼💡 </h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="Cartes_Naruto/index.html"><span class="card-title">Carte Naruto 🍥</span></a></li>
