--- a/projets/index.html
+++ b/projets/index.html
@@ -92,6 +92,7 @@
       <h2>Certifications</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="Certif_Mooc_ANSSI/index.html"><span class="card-title">Certif. MOOC De L'ANSSI</span></a></li>
+          <li class="card"><a class="card-link" href="Certif_EBIOS/index.html"><span class="card-title">Certif. EBIOS</span></a></li>
       </ul>
     </section>
 
