--- a/projets/Mission9/fiche_corrige.html
+++ b/projets/Mission9/fiche_corrige.html
@@ -28,7 +28,7 @@
             <h4>Question 2 :</h4>
             <p>En quelle année a eu lieu la Révolution française ?</p>
             <div class="reponses">
-                <label class="vrai"><input type="checkbox"  id="q2_r1 checked" disabled> 1789</label></br> <!---- correct -->
+                <label class="vrai"><input type="checkbox"  id="q2_r1" checked disabled> 1789</label></br> <!---- correct -->
                 <label class="faux"><input type="checkbox"  id="q2_r2" disabled> 1815</label></br>
                 <label class="faux"><input type="checkbox"  id="q2_r3" disabled> 1715</label></br>
                 <label class="faux"><input type="checkbox"  id="q2_r4" disabled> 1848</label></br>
@@ -119,3 +119,4 @@
     </form>
 </body>
 </html>
+
