Add new certification link for RGPD workshop

--- a/projets/index.html
+++ b/projets/index.html
@@ -93,6 +93,7 @@
       <ul class="card-list">
         <li class="card"><a class="card-link" href="Certif_Mooc_ANSSI/index.html"><span class="card-title">Certif. MOOC De L'ANSSI</span></a></li>
           <li class="card"><a class="card-link" href="Certif_EBIOS/index.html"><span class="card-title">Certif. EBIOS</span></a></li>
+        <li class="card"><a class="card-link" href="Certif_Atelier_RGPD/index.html"><span class="card-title">Certif. EBIOS</span></a></li>
       </ul>
     </section>
 
