--- a/projets/index.html
+++ b/projets/index.html
@@ -76,6 +76,7 @@
         <li class="card"><a class="card-link" href="Mission6/index.html"><span class="card-title">Mission 6</span></a></li>
          <li class="card"><a class="card-link" href="Mission9/index.html"><span class="card-title">Mission 9</span></a></li>
         <li class="card"><a class="card-link" href="Mission10/index.html"><span class="card-title">Mission 10</span></a></li>
+        <li class="card"><a class="card-link" href="Mission11/index.html"><span class="card-title">Mission 11</span></a></li>
       </ul>
     </section>
     
