--- a/projets/index.html
+++ b/projets/index.html
@@ -91,6 +91,13 @@
     </section>
 
     <section class="section">
+      <h2>PHP 🐘</h2>
+      <ul class="card-list">
+        <li class="card"><a class="card-link" href="https://moad-site-biblio.gamer.gd/"><span class="card-title">TP PHP Biblio</span></a></li>
+      </ul>
+    </section>
+
+    <section class="section">
       <h2>Certifications</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="Certif_Mooc_ANSSI/index.html"><span class="card-title">Certif. MOOC De L'ANSSI</span></a></li>
