--- a/competences/index.html
+++ b/competences/index.html
@@ -77,6 +77,15 @@
           <span class="tag">⚡ Front</span>
         </div>
 
+      <div class="competence-case" data-tilt>
+        <a class="skill" href="https://www.php.net/" target="_blank" rel="noreferrer">
+          <img src="image/php.png" alt="Logo PHP" loading="lazy">
+        </a>
+        <p>PHP</p>
+        <span class="tag">🐘 Back-end<</span>
+        </div>
+
+
         <div class="competence-case" data-tilt>
           <a href="https://fr.wikipedia.org/wiki/Python_(langage)" target="_blank" rel="noreferrer">
             <img src="image/Python.png" alt="Logo Python" loading="lazy">
@@ -128,3 +137,4 @@
   <script src="competences.js"></script>
 </body>
 </html>
+
