--- a/competences/index.html
+++ b/competences/index.html
@@ -82,7 +82,15 @@
           <img src="image/php.png" alt="Logo PHP" loading="lazy">
         </a>
         <p>PHP</p>
-        <span class="tag">🐘 Back-end<</span>
+        <span class="tag">🐘 Back-end</span>
+        </div>
+
+        <div class="competence-case" data-tilt>
+        <a class="skill" href="https://www.linux.org/" target="_blank" rel="noreferrer">
+            <img src="image/linux.png" alt="Logo Linux" loading="lazy">
+        </a>
+        <p>Linux</p>
+        <span class="tag">🐧 Système</span>
         </div>
 
 
@@ -137,4 +145,5 @@
   <script src="competences.js"></script>
 </body>
 </html>
+
 
