--- a/projets/index.html
+++ b/projets/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <section class="section">
-      <h2>Missions 🚀</h2>
+      <h2>Missions_Semestre1 🚀</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="Mission2/index.html"><span class="card-title">Mission 2</span><span class="card-sub">Projet</span></a></li>
         <li class="card"><a class="card-link" href="Mission3/mission3.html"><span class="card-title">Mission 3</span><span class="card-sub">Projet</span></a></li>
@@ -100,7 +100,13 @@
       </ul>
     </section>
 
+        <section class="section">
+      <h2>Missions_Semestre2 🚀</h2>
+      <ul class="card-list">
+        <li class="card"><a class="card-link" href="Mission1_s2/index.html"><span class="card-title">Mission 2</span><span class="card-sub">Projet</span></a></li>
     <section class="section">
+
+      
       <h2>Base de données (SQL) 📈</h2>
       <ul class="card-list">
         <li class="card"><a class="card-link" href="BD_TP1/index.html"><span class="card-title">TP1</span><span class="card-sub">SQL</span></a></li>
@@ -143,3 +149,4 @@
     <script src="script_pp.js"></script>
 </body>
 </html>
+
