--- a/projets/index.html
+++ b/projets/index.html
@@ -123,6 +123,12 @@
         <li class="card"><a class="card-link" href="https://moad-site-biblio.gamer.gd/"><span class="card-title">TP PHP Biblio</span><span class="card-sub">Site</span></a></li>
       </ul>
     </section>
+              <section class="section">
+      <h2>PHP Noté 🐘</h2>
+      <ul class="card-list">
+        <li class="card"><a class="card-link" href="TP1_note_s2"><span class="card-title">TP PHP Scolaire</span><span class="card-sub">Ecole</span></a></li>
+      </ul>
+    </section>
 
     <section class="section">
       <h2>Certifications 🎓</h2>
@@ -150,6 +156,7 @@
     <script src="script_pp.js"></script>
 </body>
 </html>
+
 
 
 
